--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@getbrevo/brevo": "^1.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@iconify/react": "^4.1.1",
     "@mui/base": "^5.0.0-beta.6",
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.135",
-    "@mui/material": "^5.14.2",
+    "@mui/material": "^5.14.6",
     "@mui/system": "^5.13.7",
     "@mui/x-date-pickers": "^6.9.2",
     "@next/env": "^13.4.13",
@@ -33,6 +34,7 @@
     "@sanity/client": "^6.4.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.5",
+    "@sendinblue/client": "^3.3.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.18",
     "google-map-react": "^2.2.1",
@@ -71,7 +73,7 @@
     "@types/google-map-react": "^2.1.7",
     "@types/hast": "^3.0.0",
     "@types/lodash.merge": "^4.6.7",
-    "@types/node": "^20.5.6",
+    "@types/node": "^20.5.7",
     "@types/nprogress": "^0.2.0",
     "@types/numeral": "^2.0.2",
     "@types/paypal__checkout-server-sdk": "^1.0.5",
